# crypto-ai-sentiment-agent

./: .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  agentic_ai_bootcamp_outline.md  docker-compose.yml  env.example  news_sources.json  pyproject.toml  spec-day-2.md  spec.md
.github/workflows/: deploy.yml  test.yml
aws-policies/: README.md  bedrock-models-policy.json  s3-bedrock-policy.json
scripts/: build.bat  clean.bat  deploy.sh  down.bat  fetch-coingecko.bat  help.bat  logs-app.bat  logs.bat  manual-deploy.sh  process-s3.bat  setup-github-actions.sh  setup.bat  shell.bat  test-api.bat  test.bat  up.bat
src/: __init__.py  database.py  main.py  models.py
src/services/: coingecko_service.py  s3_processor.py  sentiment_analyzer.py
terraform/: README.md  main.tf  setup.sh  terraform.tfvars.example  user_data.sh
tests/: conftest.py  test_api.py  test_models.py
